--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ca" lang="ca">
+  <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>La meva pàgina</title>
+  </head>
+  <body>
+    <p><a href="/attach.html"></a>attach</p>
+    <p><a href="/build.html"></a>build</p>
+    <p><a href="/cli.html"></a>cli</p>
+  </body>
+</html>
