--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>La meva pàgina</title>
   </head>
   <body>
-    <p><a href="/attach.html"></a>attach</p>
-    <p><a href="/build.html"></a>build</p>
-    <p><a href="/cli.html"></a>cli</p>
+    <p><a href="/attach.html">attach</a></p>
+    <p><a href="/build.html">build</a></p>
+    <p><a href="/cli.html">cli</a></p>
   </body>
 </html>
