--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>La meva pàgina</title>
   </head>
   <body>
+	<h1>La meva pàgina</h1>
     <p><a href="/attach.html">attach</a></p>
     <p><a href="/build.html">build</a></p>
     <p><a href="/cli.html">cli</a></p>
