--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hola com esteu, sóc l'Adrià Soto!</h1>
+	<p>Aquesta pàgina anirà destinada a explicar temes generals sobre la informàtica. <a href="/about">Llegeix més sobre la meva vida...</a></p>
 </div><!-- /.blurb -->
